SSAO doesn't scale gracefully #51216

Closed
opened 2017-04-14 22:47:28 +02:00 by Sterling Roth · 8 comments

System Information
Windows 7 + 10, Geforce graphics

Blender Version
2.78c and earlier

Short description of error
The SSAO implementation in the viewport is really clean, unless you increase the scale too much. I work in inch scale to interface better with imported CAD models, but when I'm dealing with objects that are > 1000BU in any dimension, having the ao distance set to .1 doesn't really help. Increasing the distance slider works ok, but the sampling becomes very hideous very quickly.

Attached are 2 screenshots of the viewport with a pallet model. The pallet's dimension are: 40x48x5 BU. I have the AO distance set to 10 to get some shading in between the slats, but the sampling is total static:
100PERCENT SSAO.jpg

If I scale everything down by a factor of 10 (object, ao distance and strength) the AO is smooth as butter:
10PERCENT SSAO.jpg

I understand that the SSAO implementation isn't a magic bullet, but if there were some way to scale it up more, that would help me out a ton.

Exact steps for others to reproduce the error
Add a suzanne
Turn on SSAO
Observe SSAO quality

Scale Suzanne 10x
Scale SSAO strength and distance 10x
Observe SSAO quality

**System Information** Windows 7 + 10, Geforce graphics **Blender Version** 2.78c and earlier **Short description of error** The SSAO implementation in the viewport is really clean, unless you increase the scale too much. I work in inch scale to interface better with imported CAD models, but when I'm dealing with objects that are > 1000BU in any dimension, having the ao distance set to .1 doesn't really help. Increasing the distance slider works ok, but the sampling becomes very hideous very quickly. Attached are 2 screenshots of the viewport with a pallet model. The pallet's dimension are: 40x48x5 BU. I have the AO distance set to 10 to get some shading in between the slats, but the sampling is total static: ![100PERCENT SSAO.jpg](https://archive.blender.org/developer/F545675/100PERCENT_SSAO.jpg) If I scale everything down by a factor of 10 (object, ao distance and strength) the AO is smooth as butter: ![10PERCENT SSAO.jpg](https://archive.blender.org/developer/F545676/10PERCENT_SSAO.jpg) I understand that the SSAO implementation isn't a magic bullet, but if there were some way to scale it up more, that would help me out a ton. **Exact steps for others to reproduce the error** Add a suzanne Turn on SSAO Observe SSAO quality Scale Suzanne 10x Scale SSAO strength and distance 10x Observe SSAO quality
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @SterlingRoth

Added subscriber: @SterlingRoth
Author

Even cranking up the sample count doesn't clean up the static:
100PERCENT SSAO - oversampled.jpg

Even cranking up the sample count doesn't clean up the static: ![100PERCENT SSAO - oversampled.jpg](https://archive.blender.org/developer/F545682/100PERCENT_SSAO_-_oversampled.jpg)

This issue was referenced by e280c70aa9

This issue was referenced by e280c70aa942829e7bfbd403fbb971a3c4502821

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @brecht

Added subscriber: @brecht

The issue is that the Strength needs to be set that high to compensate for the Attenuation being broken. After the fix it should be possible to get good results by only adjusting the Distance.

The issue is that the Strength needs to be set that high to compensate for the Attenuation being broken. After the fix it should be possible to get good results by only adjusting the Distance.
Author

Works perfectly, thanks Brecht!

Works perfectly, thanks Brecht!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51216
No description provided.